force-app/main/default/objects/Product2/fields/Annual_Membership_Fee__c.field-meta.xml
<CustomField>
    <fullName>Annual_Membership_Fee__c</fullName>
    <description>Registra el costo anual de mantenimiento o membresía asociado al producto.</description>
    <inlineHelpText>Ingrese el monto de la membresía anual del producto.</inlineHelpText>
    <label>Membresía Anual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>