force-app/main/default/objects/Product2/fields/Associated_Promotions__c.field-meta.xml
<CustomField>
    <fullName>Associated_Promotions__c</fullName>
    <description>Registra campañas, promociones u ofertas comerciales vigentes vinculadas al producto.</description>
    <inlineHelpText>Ingrese las promociones o campañas asociadas a este producto.</inlineHelpText>
    <label>Promociones Asociadas</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>