force-app/main/default/objects/Product2/fields/Card_Brand__c.field-meta.xml
<CustomField>
    <fullName>Card_Brand__c</fullName>
    <description>Indica la marca comercial de la tarjeta de crédito ofrecida por la entidad financiera.</description>
    <inlineHelpText>Seleccione la marca comercial de la tarjeta, por ejemplo Visa o Mastercard.</inlineHelpText>
    <label>Marca de Tarjeta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Mastercard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>