force-app/main/default/objects/Product2/fields/Card_Category__c.field-meta.xml
<CustomField>
    <fullName>Card_Category__c</fullName>
    <description>Define la categoría o segmento comercial del producto de tarjeta de crédito.</description>
    <inlineHelpText>Seleccione la categoría de la tarjeta según el segmento del producto.</inlineHelpText>
    <label>Categoría de Tarjeta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plata</fullName>
            </value>
            <value>
                <fullName>Oro</fullName>
            </value>
            <value>
                <fullName>Infinite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>