force-app/main/default/objects/Product2/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <description>Indica la tasa de interés referencial aplicable al producto de tarjeta de crédito.</description>
    <inlineHelpText>Ingrese la tasa de interés referencial asociada a este producto.</inlineHelpText>
    <label>Tasa de Interés</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>