force-app/main/default/objects/Product2/fields/Main_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Main_Benefits__c</fullName>
    <description>Almacena un resumen de los principales beneficios comerciales ofrecidos por el producto.</description>
    <inlineHelpText>Ingrese los beneficios principales del producto, como millas, cashback o promociones.</inlineHelpText>
    <label>Beneficios Principales</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>