force-app/main/default/objects/Product2/fields/Maximum_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Credit_Limit__c</fullName>
    <description>Almacena el monto máximo referencial de línea de crédito ofrecido para este producto.</description>
    <inlineHelpText>Ingrese la línea de crédito máxima referencial para este producto.</inlineHelpText>
    <label>Línea de Crédito Máxima</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>