force-app/main/default/objects/Product2/fields/Minimum_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Credit_Limit__c</fullName>
    <description>Almacena el monto mínimo referencial de línea de crédito ofrecido para este producto.</description>
    <inlineHelpText>Ingrese la línea de crédito mínima referencial para este producto.</inlineHelpText>
    <label>Línea de Crédito Mínima</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>