force-app/main/default/objects/Product2/fields/Minimum_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Requirements__c</fullName>
    <description>Describe las condiciones mínimas requeridas para acceder al producto financiero.</description>
    <inlineHelpText>Ingrese los requisitos mínimos que debe cumplir el cliente para acceder a este producto.</inlineHelpText>
    <label>Requisitos Mínimos</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>