force-app/main/default/objects/Product2/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <description>Registra un resumen comercial del producto de tarjeta de crédito y el público objetivo al que está dirigido.</description>
    <inlineHelpText>Ingrese una descripción general del producto y el segmento de clientes al que está orientado.</inlineHelpText>
    <label>Descripción del Producto</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>