force-app/main/default/objects/Product2/fields/Product_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Status__c</fullName>
    <description>Indica si el producto se encuentra disponible para su comercialización.</description>
    <inlineHelpText>Seleccione el estado actual del producto.</inlineHelpText>
    <label>Estado del Producto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Inactivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>