force-app/main/default/objects/Product2/fields/Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel__c</fullName>
    <description>Indica los canales a través de los cuales el producto puede ser ofrecido o comercializado.</description>
    <inlineHelpText>Seleccione el canal de venta disponible para este producto.</inlineHelpText>
    <label>Canal de Venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Oficina</fullName>
            </value>
            <value>
                <fullName>Campaña</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>